--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,6 @@
         </ul>
     </div>
 </nav>
-<div class="container">
+<div class="container main-container">
     <router-outlet></router-outlet>
 </div>
